Fix the contrast of unread badges
See https://www.woltlab.com/community/thread/300275-kontrast-badges-darkmode/

--- a/wcfsetup/install/files/style/ui/darkMode.scss
+++ b/wcfsetup/install/files/style/ui/darkMode.scss
@@ -8,6 +8,7 @@ html[data-color-scheme="dark"] {
 
 		&.badgeUpdate {
 			--background-color: #027abb;
+			--color: #fcfcfd;
 		}
 
 		&.green {
